src/styles.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800|Open+Sans:300,400,600,800');
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700');

*{
    border: 0;
    margin: 0;
    padding: 0;
}

body {
    /* font-family: 'Montserrat', sans-serif!important; */
    /* font-family: 'Open Sans', sans-serif!important; */
    font-family: 'Source Sans Pro', sans-serif!important;
    font-size: 20px!important;
    font-weight: 400!important;
    letter-spacing: 0.5px;
} 

/* Center Navbar */
.navbar-default > .container-fluid {   
    display: flex;
    justify-content: center;
}
/* Center Navbar */

.mainContainer {
    margin: 20px 0 0 0;
}

li.nav-item {
    border-left: 1px dotted white;
    letter-spacing: 3px;
    padding: 0 30px 0 30px;
}

li.nav-item:last-child {
    border-left: 1px dotted white;
    letter-spacing: 3px;
    padding: 0 0 0 30px;
}

/*screenshotGameGb */


.blurryScreenshotGameGb {
    -webkit-filter: blur(4px) grayscale(65%);
    -moz-filter: blur(4px) grayscale(65%);
    -o-filter: blur(4px) grayscale(65%);
    -ms-filter: blur(4px) grayscale(65%);
    filter: blur(4px) grayscale(65%);
}

.containerScreenshotGameGb {
    position: relative; 
    overflow: hidden; 
    width: 100%; 
    height: 340px;
}

.containerScreenshotGameGb img {
  position: absolute;
  top: -9999px;
  right: -9999px;
  bottom: -9999px;
  left: -9999px;
  margin: auto;
  min-width: 100%;
  min-height: 100%;
}


.containerScreenshotGameGbColor {
    position: relative; 
    overflow: hidden; 
    width: 100%; 
    height: 340px;
}
.containerScreenshotGameGbColor img {
  position: absolute;
  top: -9999px;
  right: -9999px;
  bottom: -9999px;
  left: -9999px;
  margin: auto;
  min-width: 100%;
  min-height: 100%;   
}

.screenshotGameGb {
    height: 340px; 
    position: absolute;
    width: 100%;
    top: 90px;
    left: 50%;
    transform: translate(-50%, 0);
}

.coverBig {
    bottom: 0!important;
    left: 15px!important;
    right: 0!important;
    top: 0!important;
    z-index: 1;
    margin: 0!important;
    min-width: 0!important;
    min-height: 0!important;
}
.coverSmall {
    display: inline-block;
    object-fit: cover;
    width: 65px;
    height: 65px;
    margin: 0 20px 20px 20px;
}


@media screen and (max-width: 768px) {

li.nav-item {
    font-size: 14px;
    border: none;
    border-bottom: 1px dotted white;
    letter-spacing: 3px;
    padding: 0;
}

li.nav-item:last-child {
    border: none;
    font-size: 14px;
    letter-spacing: 3px;
    padding: 0;
}

}

